--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ sled = "0.34.7"
 serde = { version = "1.0.210", features = ["derive"] }
 bincode = "1.3.3"
 serde_json = "1.0.128"
+clap-help = "1.3.0"
+clap = { version = "4.5.18", features = ["derive"] }
+colored = "2.1.0"
 
 [profile.release]
 opt-level = "z"
