--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1.0.128"
 clap-help = "1.3.0"
 clap = { version = "4.5.18", features = ["derive"] }
 colored = "2.1.0"
+psutil = "3.3.0"
 
 [profile.release]
 opt-level = "z"
