--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ clap-help = "1.3.0"
 clap = { version = "4.5.18", features = ["derive"] }
 colored = "2.1.0"
 psutil = "3.3.0"
+sysinfo = "0.31.4"
 
 [profile.release]
 opt-level = "z"
