--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ colored = "2.1.0"
 psutil = "3.3.0"
 sysinfo = "0.31.4"
 num_cpus = "1.16.0"
+percent-encoding = "2.3.1"
 
 [profile.release]
 opt-level = "z"
