--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ sysinfo = "0.31.4"
 num_cpus = "1.16.0"
 percent-encoding = "2.3.1"
 mailparse = "0.13"
+lazy_static = "1.5.0"
 
 [profile.release]
 opt-level = "z"
